# intelligent-feed

./: .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  INITIAL_SPECIFICATION.md  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
intel/: cognify_client.py  config.py  db.py  db_cli.py  enricher.py  fetcher.py  models.py  router.py  scheduler.py
intel/activation/: __init__.py  base.py  bondnexus.py  dynamic_worlock.py  factory.py  globalbitings.py  rag_research.py
intel/api/: __init__.py  outcomes.py
intel/renderers/: __init__.py  agent.py  human.py  structured.py
tests/: test_config.py  test_fetcher.py  test_models.py  test_renderers.py  test_router.py
