[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligent-feed"
dynamic = ["version"]
description = "Per-project activators and shared Cognee-extraction rendering for DarojaAI pipelines."
readme = "README.md"
requires-python = ">=3.14"
license = {text = "Apache-2.0"}
authors = [
    {name = "DarojaAI"},
]
keywords = ["cognee", "rss", "pypi", "enrichment", "activators", "darojaai"]
# Runtime dependencies mirror the previous requirements.txt. Keep these
# in sync with whatever the orchestrator needs at import time (the
# activators only need stdlib, but the parent pipeline needs everything
# below for fetcher/enricher/db/router).
dependencies = [
    "anthropic>=0.25.0",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "PyYAML>=6.0.1",
    "APScheduler>=3.10.4",
    "python-ulid>=2.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Repository = "https://github.com/DarojaAI/intelligent-feed"
Issues = "https://github.com/DarojaAI/intelligent-feed/issues"
# The Q15-17 hardening (this repo) tracks active org-wide questions.
Changelog = "https://github.com/DarojaAI/intelligent-feed/blob/main/CHANGELOG.md"

[tool.setuptools_scm]
# Derive version from the most recent vX.Y.Z git tag. Tags are produced
# by semantic-release via .github/workflows/release.yml; this keeps
# pyproject.toml as a single source of truth for *what the package is*
# and tags as the source of truth for *what version it is*.
#
# Mirrors DarojaAI/devnexus-common's setup. See:
# https://github.com/DarojaAI/devnexus-common/blob/main/pyproject.toml
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"
fallback_version = "0.1.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["intel*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
